[gd_scene load_steps=9 format=3 uid="uid://ebcej10balwm"]

[ext_resource type="Script" path="res://WaterCollectible.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://bybf5l316ja6o" path="res://sounds/splash.wav" id="3"]

[sub_resource type="SphereShape3D" id="1"]
radius = 3.0

[sub_resource type="SphereMesh" id="2"]

[sub_resource type="ArrayMesh" id="3"]
resource_name = "water_collectible_Sphere015"
_surfaces = [{
"aabb": AABB(0, 0, 0, 0, 0, 0),
"format": 0,
"primitive": 5,
"vertex_count": 0,
"vertex_data": PackedByteArray()
}]
blend_shape_mode = 0

[sub_resource type="Animation" id="4"]
resource_name = "Animation"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sphere:blend_shapes/Displace.001")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833, 2, 2.04167, 2.08333, 2.125, 2.16667, 2.20833, 2.25, 2.29167, 2.33333, 2.375, 2.41667, 2.45833),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.00348518, 0.0136127, 0.0298905, 0.0518266, 0.078929, 0.110706, 0.146665, 0.186314, 0.229161, 0.274714, 0.322481, 0.371971, 0.422691, 0.474148, 0.525852, 0.577309, 0.628029, 0.677519, 0.725286, 0.770839, 0.813687, 0.853335, 0.889294, 0.921071, 0.948173, 0.970109, 0.986387, 0.996515, 1.0, 0.996515, 0.986387, 0.97011, 0.948173, 0.921071, 0.889294, 0.853336, 0.813687, 0.770839, 0.725286, 0.677519, 0.628029, 0.577309, 0.525852, 0.474148, 0.422691, 0.371971, 0.322481, 0.274714, 0.229161, 0.186313, 0.146664, 0.110706, 0.0789288, 0.0518267, 0.0298904, 0.0136126, 0.0034852, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sphere:blend_shapes/Displace.002")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833, 2, 2.04167, 2.08333, 2.125, 2.16667, 2.20833, 2.25, 2.29167, 2.33333, 2.375, 2.41667, 2.45833),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.996515, 0.986387, 0.97011, 0.948173, 0.921071, 0.889294, 0.853335, 0.813687, 0.770839, 0.725286, 0.677519, 0.628029, 0.577309, 0.525852, 0.474148, 0.422691, 0.371971, 0.322481, 0.274714, 0.229161, 0.186313, 0.146665, 0.110706, 0.0789289, 0.0518267, 0.0298905, 0.0136126, 0.00348508, 0.0, 0.00348518, 0.0136127, 0.0298905, 0.0518266, 0.078929, 0.110706, 0.146664, 0.186314, 0.229161, 0.274714, 0.322481, 0.371971, 0.422691, 0.474148, 0.525852, 0.577309, 0.628029, 0.677519, 0.725286, 0.770839, 0.813687, 0.853336, 0.889294, 0.921071, 0.948173, 0.97011, 0.986387, 0.996515, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AirBubble:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.3, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.288014, -0.0440477, -0.262766), Vector3(-0.216516, -0.0440477, -0.199213), Vector3(-0.288014, -0.0440477, -0.262766)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AirBubble2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.3, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.764564, 0.514179, -0.551048), Vector3(0.509273, 0.33453, -0.428131), Vector3(0.764564, 0.514179, -0.551048)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../AirBubble3:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.3, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0415932, -0.589306, 0.931537), Vector3(-0.0415932, -0.267829, 0.600605), Vector3(-0.0415932, -0.589306, 0.931537)]
}

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AirBubble:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.288014, -0.0440477, -0.262766)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AirBubble2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.764564, 0.514179, -0.551048)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AirBubble3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0415932, -0.589306, 0.931537)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_76a4g"]
_data = {
"Animation": SubResource("4"),
"RESET": SubResource("6")
}

[node name="WaterCollectible" type="Area3D" groups=["WaterCollectible", "Water_and_Light"]]
script = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("1")

[node name="AirBubble" type="MeshInstance3D" parent="."]
transform = Transform3D(0.310076, 0, 0, 0, 0.310076, 0, 0, 0, 0.310076, -0.288014, -0.0440477, -0.262766)
mesh = SubResource("2")

[node name="AirBubble2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.764564, 0.514179, -0.551048)
mesh = SubResource("2")

[node name="AirBubble3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0415932, -0.589306, 0.931537)
mesh = SubResource("2")

[node name="water_collectible" type="Node3D" parent="."]

[node name="Sphere" type="MeshInstance3D" parent="water_collectible"]
mesh = SubResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="water_collectible"]
autoplay = "Animation"
libraries = {
"": SubResource("AnimationLibrary_76a4g")
}

[node name="WaterStopTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="water_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3")
volume_db = 10.0

[connection signal="body_entered" from="." to="." method="_on_WaterCollectible_body_entered"]
[connection signal="timeout" from="WaterStopTimer" to="." method="_on_WaterStopTimer_timeout"]
